--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <title>Image Click Counter</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #f5f5f5;
+            background: linear-gradient(135deg, #f5f5f5 0%, #c3cfe2 100%);
             margin: 0;
-        }
-        h1 {
-            color: #333;
         }
         .container {
             background-color: white;
@@ -24,6 +21,12 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             text-align: center;
+            animation: fadeIn 1s ease-in-out;
+        }
+        h1 {
+            color: #333;
+            font-size: 2em;
+            margin-bottom: 20px;
         }
         img {
             width: 200px;
@@ -31,10 +34,11 @@
             cursor: pointer;
             margin-top: 10px;
             border-radius: 10px;
-            transition: transform 0.2s;
+            transition: transform 0.2s, box-shadow 0.2s;
         }
         img:hover {
             transform: scale(1.05);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
         p {
             margin-top: 20px;
@@ -44,6 +48,11 @@
         span {
             font-weight: bold;
             color: #ff6347;
+            font-size: 1.5em;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
     </style>
 </head>
@@ -59,13 +68,32 @@
         const image = document.getElementById('clickableImage');
         const clickCountDisplay = document.getElementById('clickCount');
 
+        // Preload pop sound with increased volume
+        function playPopSound() {
+            const popSound = new Audio('https://www.soundjay.com/button/beep-07.wav');
+            popSound.volume = 1.0; // เพิ่มความดังของเสียง
+            popSound.play();
+        }
+
         // Display initial click count
         clickCountDisplay.textContent = clickCount;
 
+        // Handle single and multi-touch events with fast and loud pop sound
         image.addEventListener('click', () => {
             clickCount++;
             clickCountDisplay.textContent = clickCount;
             localStorage.setItem('clickCount', clickCount);
+            playPopSound();
+        });
+
+        image.addEventListener('touchstart', (e) => {
+            const touches = e.touches.length;
+            clickCount += touches;
+            clickCountDisplay.textContent = clickCount;
+            localStorage.setItem('clickCount', clickCount);
+            for (let i = 0; i < touches; i++) {
+                playPopSound();
+            }
         });
     </script>
 </body>
